--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://Manish-hr14.github.io/fixedfdao",
+    "homepage": "https://Manish-hr14.github.io/freelance",
     "name": "vite-project",
     "private": true,
     "version": "0.0.0",
